# todo-svelte-rs

./: README.md
backend/: .gitignore  Cargo.toml  database.sqlite
backend/migrations/: 20231221130716_todos.sql
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte  +page.ts
